--- a/schedule/virt_autotest/kubevirt-tests-sles.yaml
+++ b/schedule/virt_autotest/kubevirt-tests-sles.yaml
@@ -9,6 +9,12 @@ schedule:
     - '{{bootup_and_install}}'
     - '{{kubevirt_tests}}'
 conditional_schedule:
+    pxe_boot:
+        IPXE:
+            0:
+                - boot/boot_from_pxe
+            1:
+                - installation/ipxe_install
     barrier_setup:
         SERVICE:
             rke2-server:
@@ -17,7 +23,7 @@ conditional_schedule:
         RUN_TEST_ONLY:
             0:
                 - autoyast/prepare_profile
-                - installation/ipxe_install
+                - '{{pxe_boot}}'
                 - autoyast/installation
                 - virt_autotest/login_console
     kubevirt_tests:
